--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -5,7 +5,7 @@ spring:
         show-sql: true
         properties:
             hibernate:
-                format_sql: true
+                '[format_sql]': true
     datasource:
         url: jdbc:mysql://localhost:3306/team_collab?createDatabaseIfNotExist=true
         username: root
