--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -21,3 +21,10 @@ spring:
 # logging:
 #     level:
 #         root: DEBUG
+logging:
+    level:
+        org:
+            springframework:
+                web:
+                    socket: DEBUG
+            messaging: DEBUG
