--- a/pom.xml
+++ b/pom.xml
@@ -58,6 +58,10 @@
 	        <groupId>org.springframework</groupId>
 	        <artifactId>spring-messaging</artifactId>
 	    </dependency>
+	    <dependency>
+	        <groupId>com.github.ben-manes.caffeine</groupId>
+	        <artifactId>caffeine</artifactId>
+	    </dependency>
 	    <!-- <dependency>
 	        <groupId>org.springframework.security</groupId>
 	        <artifactId>spring-security-messaging</artifactId>
